--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -222,6 +222,11 @@ td {
     background: url(/src/blog_posts/blog2/cyberlover_placehilder.png) center center/cover;
 }
 
+/* Blog 2 */
+.blog3 {
+    background: url(/src/blog_posts/blog3/img1.png) center center/cover;
+}
+
 /* Project paper */
 .project1 {
     background: url(/src/project_posts/project1/paper.png) center center/cover;
