--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -255,3 +255,8 @@ td {
 .project5 {
     background: url(/src/project_posts/project5/aina.png) center center/cover;
 }
+
+/* Maquintel - Mini Vizca 400 */
+.project6 {
+    background: url(/src/project_posts/project6/digital_twin.jpg) center center/cover;
+}
