Blog 7 en and es added
Changes to be committed:
	new file:   es/projects/rovver_x_130.html
	modified:   projects/rovver_x_130.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project7/card.png
	new file:   src/project_posts/project7/circuito_de_prueba_1.png
	new file:   src/project_posts/project7/circuito_de_prueba_1A.gif
	new file:   src/project_posts/project7/circuito_de_prueba_1B.gif
	new file:   src/project_posts/project7/circuito_de_prueba_2.png
	new file:   src/project_posts/project7/circuito_de_prueba_2A.gif
	new file:   src/project_posts/project7/circuito_de_prueba_2B.gif
	new file:   src/project_posts/project7/intro_gif.gif
	new file:   src/project_posts/project7/pipe_clean_ssample_img.png
	new file:   src/project_posts/project7/rovver_cad_1.png
	new file:   src/project_posts/project7/rovver_cad_3.png
	new file:   src/project_posts/project7/rovver_extended_cad_1.png
	new file:   src/project_posts/project7/rovver_extended_cad_2.png
	new file:   src/project_posts/project7/rovver_modules.png
	new file:   src/project_posts/project7/rovver_real_1.jpeg
	new file:   src/project_posts/project7/rpvver_cad_2.png
	new file:   src/project_posts/project7/rvx_sizes_s.png
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -260,3 +260,8 @@ td {
 .project6 {
     background: url(/src/project_posts/project6/digital_twin.jpg) center center/cover;
 }
+
+/* Envirosight - Rovver X 130 */
+.project7 {
+    background: url(/src/project_posts/project7/card.png) center center/cover;
+}
