fix spelling in synthetic_lover es blog, added project8 en and es
Changes to be committed:
	modified:   es/blogs/synthetic_lover.html
	new file:   es/projects/inverted_wheeled_pendulum_train.html
	new file:   projects/inverted_wheeled_pendulum_train.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project8/RL_train.gif
	new file:   src/project_posts/project8/RL_train_2.gif
	new file:   src/project_posts/project8/a_1.png
	new file:   src/project_posts/project8/a_2.png
	new file:   src/project_posts/project8/a_3.png
	new file:   src/project_posts/project8/a_4.png
	new file:   src/project_posts/project8/adobe_render.jpg
	new file:   src/project_posts/project8/behaviors.gif
	new file:   src/project_posts/project8/card.png
	new file:   src/project_posts/project8/chancla.gif
	new file:   src/project_posts/project8/house_1.png
	new file:   src/project_posts/project8/house_2.png
	new file:   src/project_posts/project8/house_nav.gif
	new file:   src/project_posts/project8/intro.gif
	new file:   src/project_posts/project8/map.png
	new file:   src/project_posts/project8/sensors.gif
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -164,6 +164,23 @@ td {
     padding-bottom: 3rem;
 }
 
+.video-container {
+    position: relative;
+    /* padding-bottom: 6.25%; */
+    height: 0;
+    overflow: hidden;
+    max-width: 100%;
+    background: #000;
+  }
+  
+  .video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
 /* Responsive Styles */
 @media (max-width: 768px) {
 
@@ -264,4 +281,9 @@ td {
 /* Envirosight - Rovver X 130 */
 .project7 {
     background: url(/src/project_posts/project7/card.png) center center/cover;
+}
+
+/* Inverted two wheeled robot - part 1 */
+.project8 {
+    background: url(/src/project_posts/project8/card.png) center center/cover;
 }
