project 9 added en es
Changes to be committed:
	new file:   es/projects/asd_robot.html
	new file:   projects/asd_robot.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project9/1.png
	new file:   src/project_posts/project9/10.png
	new file:   src/project_posts/project9/11.png
	new file:   src/project_posts/project9/2.png
	new file:   src/project_posts/project9/3.png
	new file:   src/project_posts/project9/4.png
	new file:   src/project_posts/project9/5.png
	new file:   src/project_posts/project9/6.png
	new file:   src/project_posts/project9/7.png
	new file:   src/project_posts/project9/8.png
	new file:   src/project_posts/project9/9.png
	new file:   src/project_posts/project9/c.jpg
	new file:   src/project_posts/project9/d.jpg
	new file:   src/project_posts/project9/i.jpg
	new file:   src/project_posts/project9/introv2.png
	new file:   src/project_posts/project9/r.jpg
	new file:   src/project_posts/project9/s.jpg
	new file:   src/project_posts/project9/v.jpg
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -287,3 +287,8 @@ td {
 .project8 {
     background: url(/src/project_posts/project8/card.png) center center/cover;
 }
+
+/* ASD Robot */
+.project9 {
+    background: url(/src/project_posts/project9/r.jpg) center center/cover;
+}
