Project 10 - Lim2n added esp and en versions
Changes to be committed:
	new file:   es/projects/lim2n.html
	new file:   projects/lim2n.html
	modified:   src/css/blog_posts.css
	modified:   src/css/dialogue.css
	new file:   src/project_posts/project10/intro_1.png
	new file:   src/project_posts/project10/intro_2.png
	new file:   src/project_posts/project10/intro_img.png
	new file:   src/project_posts/project10/re_1.png
	new file:   src/project_posts/project10/re_2.png
	new file:   src/project_posts/project10/re_3.png
	new file:   src/project_posts/project10/re_4.png
	new file:   src/project_posts/project10/re_5.png
	new file:   src/project_posts/project10/sr_1.png
	new file:   src/project_posts/project10/sr_2.png
	new file:   src/project_posts/project10/sr_3.png
	new file:   src/project_posts/project10/sr_4.gif
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_es.html

--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -145,6 +145,14 @@ td {
     /* maintain aspect ratio */
 }
 
+li {
+  list-style-type: circle;
+}
+
+li li {
+  list-style-type: square;
+}
+
 
 .video-container {
     position: relative;
@@ -291,4 +299,9 @@ td {
 /* ASD Robot */
 .project9 {
     background: url(/src/project_posts/project9/r.jpg) center center/cover;
+}
+
+/* LLM+A*+PD Navigation */
+.project10 {
+    background: url(/src/project_posts/project10/intro_img.png) center center/cover;
 }
