Fix list issue on css class
Changes to be committed:
	modified:   es/projects/lim2n.html
	modified:   projects/lim2n.html
	modified:   src/css/blog_posts.css

--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -145,13 +145,14 @@ td {
     /* maintain aspect ratio */
 }
 
-li {
+.custom-list li {
   list-style-type: circle;
 }
 
-li li {
+.custom-list li li {
   list-style-type: square;
 }
+
 
 
 .video-container {
