--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -196,4 +196,9 @@ h2::selection {
   .content-text h2 {
     font-size: 2.5rem;
   }
+  .container {
+  max-width: 100%;
+  margin: 0 0;
+  padding: 0rem 0rem;
+  }
 }
