Better over-all card aesthetics and spacing
Changes to be committed:
	modified:   src/css/utilities.css

--- a/src/css/utilities.css
+++ b/src/css/utilities.css
@@ -8,7 +8,7 @@
 .container {
   max-width: 80%;
   margin: 0 auto;
-  padding: 1rem 2rem;
+  padding: 1rem 0;
 }
 
 h1::selection,
@@ -149,7 +149,7 @@ h2::selection {
 /* Project cards */ 
 
 .card {
-  padding: 1rem;
+  padding: 0rem;
   background: var(--card-background);
   color: #ffffff;
   border-radius: 5px;
