Project 11 es/en added, covers of some project chaged to gif ones
Changes to be committed:
	new file:   es/projects/lumina.html
	new file:   es/projects/template_es.html
	new file:   projects/lumina.html
	modified:   src/css/blog_posts.css
	new file:   src/project_posts/project11/1.gif
	new file:   src/project_posts/project11/10.gif
	new file:   src/project_posts/project11/11.png
	new file:   src/project_posts/project11/12.gif
	new file:   src/project_posts/project11/13.gif
	new file:   src/project_posts/project11/14.gif
	new file:   src/project_posts/project11/15.gif
	new file:   src/project_posts/project11/2.png
	new file:   src/project_posts/project11/3.png
	new file:   src/project_posts/project11/4.gif
	new file:   src/project_posts/project11/5.png
	new file:   src/project_posts/project11/6.png
	new file:   src/project_posts/project11/7.png
	new file:   src/project_posts/project11/8.gif
	new file:   src/project_posts/project11/9.gif
	modified:   src/project_posts/projects.html
	modified:   src/project_posts/projects_cherrypicked.html
	modified:   src/project_posts/projects_cherrypicked_es.html
	modified:   src/project_posts/projects_es.html

--- a/src/css/blog_posts.css
+++ b/src/css/blog_posts.css
@@ -306,3 +306,8 @@ td {
 .project10 {
     background-color: var(--card-bg-primary);
 }
+
+/* Lumina streamer */
+.project11 {
+    background-color: var(--card-bg-primary);
+}
